--- a/app/components/networks/networks.list.html
+++ b/app/components/networks/networks.list.html
@@ -1,196 +1,21 @@
 <div class="row">
-    <div class="col-xs-12 col-sm-6">
-        <div class="hpanel hnavyblue" >
+    <div class="col-xs-12 col-sm-6" ng-repeat="parent in networks.network_parents track by $index">
+        <div class="hpanel" ng-class="::parent.color">
             <div class="panel-body" style="padding: 10px 5px;">
                 <div class="col-xs-8">
                     <div class="stats-title pull-left">
-                        <a ui-sref="{{'user.list' + nav.nav_url}}">
-                            <h3>Accelerators</h3>
-                            <h1 class="text-info">{{profile.team.count.founder}}</h1>
-                        </a>
+                        <h3>{{::parent.title}}</h3>
                     </div>
                 </div>
                 <div class="col-xs-4">
                     <div class="stats-icon pull-right">
-                        <i class="pe-7s-next fa-4x"></i>
+                        <i class="fa-4x" ng-class="::parent.icon"></i>
                     </div>
                 </div>
             </div>
             <div class="panel-footer" style="background: #fff;">
-                <div ng-repeat="item in profile.team.founder">
-                    <div style="margin-right: -2px; margin-bottom:-5px;">
-                        <div ng-if="$first" style="padding-top:5px;"></div>
-                        <div class="row" ng-include="'components/users/user.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
-                        <div ng-if="$last" style="margin-bottom:-32px;"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-12 col-sm-6">
-        <div class="hpanel hblue" >
-            <div class="panel-body" style="padding: 10px 5px;">
-                <div class="col-xs-8">
-                    <div class="stats-title pull-left">
-                        <a ui-sref="{{'user.list' + nav.nav_url}}">
-                            <h3>Colleges</h3>
-                            <h1 class="text-info">{{profile.team.count.investor}}</h1>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-xs-4">
-                    <div class="stats-icon pull-right">
-                        <i class="pe-7s-culture fa-4x"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-footer" style="background: #fff;">
-                <div ng-repeat="item in profile.team.investor">
-                    <div style="margin-right: -2px; margin-bottom:-5px;">
-                        <div ng-if="$first" style="padding-top:5px;"></div>
-                        <div class="row" ng-include="'components/users/user.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
-                        <div ng-if="$last" style="margin-bottom:-32px;"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-12 col-sm-6">
-        <div class="hpanel hviolet" >
-            <div class="panel-body" style="padding: 10px 5px;">
-                <div class="col-xs-8">
-                    <div class="stats-title pull-left">
-                        <a ui-sref="{{'user.list' + nav.nav_url}}">
-                            <h3>Coworking</h3>
-                            <h1 class="text-info">{{profile.team.count.team}}</h1>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-xs-4">
-                    <div class="stats-icon pull-right">
-                        <i class="pe-7s-plug fa-4x"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-footer" style="background: #fff;">
-                <div ng-repeat="item in profile.team.team">
-                    <div style="margin-right: -2px; margin-bottom:-5px;">
-                        <div ng-if="$first" style="padding-top:5px;"></div>
-                        <div class="row" ng-include="'components/users/user.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
-                        <div ng-if="$last" style="margin-bottom:-32px;"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-12 col-sm-6">
-        <div class="hpanel hnavyblue" >
-            <div class="panel-body" style="padding: 10px 5px;">
-                <div class="col-xs-8">
-                    <div class="stats-title pull-left">
-                        <a ui-sref="{{'user.list' + nav.nav_url}}">
-                            <h3>Incubators</h3>
-                            <h1 class="text-info">{{profile.team.count.mentor}}</h1>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-xs-4">
-                    <div class="stats-icon pull-right">
-                        <i class="pe-7s-light fa-4x"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-footer" style="background: #fff;">
-                <div ng-repeat="item in profile.team.mentor">
-                    <div style="margin-right: -2px; margin-bottom:-5px;">
-                        <div ng-if="$first" style="padding-top:5px;"></div>
-                        <div class="row" ng-include="'components/users/user.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
-                        <div ng-if="$last" style="margin-bottom:-32px;"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-12 col-sm-6">
-        <div class="hpanel hgreen" >
-            <div class="panel-body" style="padding: 10px 5px;">
-                <div class="col-xs-8">
-                    <div class="stats-title pull-left">
-                        <a ui-sref="{{'user.list' + nav.nav_url}}">
-                            <h3>Investment</h3>
-                            <h1 class="text-info">{{profile.team.count.provider}}</h1>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-xs-4">
-                    <div class="stats-icon pull-right">
-                        <i class="pe-7s-gleam fa-4x"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-footer" style="background: #fff;">
-                <div ng-repeat="item in profile.team.provider">
-                    <div style="margin-right: -2px; margin-bottom:-5px;">
-                        <div ng-if="$first" style="padding-top:5px;"></div>
-                        <div class="row" ng-include="'components/users/user.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
-                        <div ng-if="$last" style="margin-bottom:-32px;"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-12 col-sm-6">
-        <div class="hpanel hviolet" >
-            <div class="panel-body" style="padding: 10px 5px;">
-                <div class="col-xs-8">
-                    <div class="stats-title pull-left">
-                        <a ui-sref="{{'user.list' + nav.nav_url}}">
-                            <h3>Meetups</h3>
-                            <h1 class="text-info">{{profile.team.count.provider}}</h1>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-xs-4">
-                    <div class="stats-icon pull-right">
-                        <i class="pe-7s-coffee fa-4x"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-footer" style="background: #fff;">
-                <div ng-repeat="item in profile.team.provider">
-                    <div style="margin-right: -2px; margin-bottom:-5px;">
-                        <div ng-if="$first" style="padding-top:5px;"></div>
-                        <div class="row" ng-include="'components/users/user.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
-                        <div ng-if="$last" style="margin-bottom:-32px;"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-12 col-sm-6">
-        <div class="hpanel hblue" >
-            <div class="panel-body" style="padding: 10px 5px;">
-                <div class="col-xs-8">
-                    <div class="stats-title pull-left">
-                        <a ui-sref="{{'user.list' + nav.nav_url}}">
-                            <h3>Mentorship</h3>
-                            <h1 class="text-info">{{profile.team.count.provider}}</h1>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-xs-4">
-                    <div class="stats-icon pull-right">
-                        <i class="pe-7s-study fa-4x"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-footer" style="background: #fff;">
-                <div ng-repeat="item in profile.team.provider">
-                    <div style="margin-right: -2px; margin-bottom:-5px;">
-                        <div ng-if="$first" style="padding-top:5px;"></div>
-                        <div class="row" ng-include="'components/users/user.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
-                        <div ng-if="$last" style="margin-bottom:-32px;"></div>
-                    </div>
+                <div ng-repeat="item in networks.networks[parent.id] track by $index">
+                    {{item.profile.name}}
                 </div>
             </div>
         </div>
